--- a/page2.html
+++ b/page2.html
@@ -33,22 +33,12 @@
     
     <div>
 		<div class="row">
-			<div class="col">
-				<div style="padding:2%">
-					<div class="animated fadeIn" >
-						<a href="page1.html">
-							<i class="fa fa-arrow-left fa-2x"></i>
-						</a>
-					</div>
-				</div>
-			</div>
-			<div class="col">
-				<div>
-					<div class="btn-group d-flex justify-content-end animated fadeIn" style="padding:3%">
-						<button type="button" class="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color: rgb(32, 156, 193);font-weight: bold;">
+			<div class="col" style="margin:0.5%">
+				<div class="dropdown show">
+					<a class="btn dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="font-weight: bold;">
 						INDICE
-						</button>
-						<div class="dropdown-menu">
+					</a>
+					<div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
 						<a class="dropdown-item" href="page1.html">Paso 1: Descargar app</a>
 						<a class="dropdown-item" href="page2.html">Paso 2: Instalar app</a>
 						<a class="dropdown-item" href="page3.html">Paso 3: Ingresar a web</a>
@@ -60,7 +50,6 @@
 						<a class="dropdown-item" href="page9.html">Paso 9: Finalizar</a>
 						<div class="dropdown-divider"></div>
 						<a class="dropdown-item" href="index.html">Inicio</a>
-						</div>
 					</div>
 				</div>
 			</div>
@@ -74,10 +63,10 @@
 						</h3>
 						<p class="text-center">
 							Una vez instalada la APP en el dispositivo debería aparecer la siguiente pantalla
-						</p>
+						</p>	
 						<h5 class="text-center">
 							Nota: se utilizará esta pantalla más adelante para conectar el dispositivo al servidor
-						</h5>	
+						</h5>
 					</div>
 
 					<div class="d-flex justify-content-center">
@@ -85,12 +74,12 @@
 					</div>
 
 					<div class="d-flex justify-content-center" >
-						<a href="page3.html" class="btn zoom" style="background-color: rgb(32, 156, 193);color:white;">SIGUIENTE</a>
+						<a href="page1.html" class="btn zoom" style="background-color: rgb(106, 179, 201);color:white;margin:1%">ANTERIOR</a>
+						<a href="page3.html" class="btn zoom" style="background-color: rgb(32, 156, 193);color:white;margin:1%">SIGUIENTE</a>
 					</div>	
 				</div>
 			</div>
-		</div>
-		
+		</div>	
     </div>
 
 <!--===============================================================================================-->
