--- a/page1.html
+++ b/page1.html
@@ -62,7 +62,7 @@
 							PASO 1
 						</h3>
 						<p class="text-center">
-							Descargar APP en el dispositivo desde el website
+							Descargar APP en el dispositivo desde el <a href="http://tgnvalvulas.smartworkar.com:8888/ui/#/">website</a>
 						</p>	
 					</div>
 
