--- a/page3.html
+++ b/page3.html
@@ -62,7 +62,7 @@
 							PASO 3
 						</h3>
 						<p class="text-center">
-							Ingresar al website con usuario y contraseña
+							Ingresar al <a href="http://tgnvalvulas.smartworkar.com:8888/ui/#/">website</a> con usuario y contraseña
 						</p>	
 						
 					</div>
