--- a/page5.html
+++ b/page5.html
@@ -41,10 +41,10 @@
 					<div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
 						<a class="dropdown-item" href="page1.html">Paso 1: Descargar app</a>
 						<a class="dropdown-item" href="page2.html">Paso 2: Instalar app</a>
-						<a class="dropdown-item" href="page3.html">Paso 3: Ingresar a web</a>
-						<a class="dropdown-item" href="page4.html">Paso 4: Elegir menú</a>
-						<a class="dropdown-item" href="page5.html">Paso 5: Generar QR</a>
-						<a class="dropdown-item" href="page6.html">Paso 6: Leer QR</a>
+						<a class="dropdown-item" href="page3.html">Paso 3: Ingresar app</a>
+						<a class="dropdown-item" href="page4.html">Paso 4: Ingresar a web</a>
+						<a class="dropdown-item" href="page5.html">Paso 5: Generar token/QR</a>
+						<a class="dropdown-item" href="page6.html">Paso 6: Leer token/QR</a>
 						<a class="dropdown-item" href="page7.html">Paso 7: Descargar data</a>
 						<a class="dropdown-item" href="page8.html">Paso 8: Ejecutar app</a>
 						<a class="dropdown-item" href="page9.html">Paso 9: Finalizar</a>
@@ -54,30 +54,29 @@
 				</div>
 			</div>
 		</div>
-		<div class="row animated fadeInDown">
-			<div class="d-flex justify-content-center">
-				<div class="col-7">
-					<div>	
-						<h3 class="text-center">
-							PASO 5	
-						</h3>
-						<p class="text-center">
-							Aparecerá un botón para crear un código QR que conecta el dispositivo con el servidor
-						</p>	
-						
-					</div>
-
-					<div class="d-flex justify-content-center">
-						<img src="images/page5.jpg" class="img-fluid" alt="Responsive image" style="width: 70%;padding:4%">
-					</div>
-
-					<div class="d-flex justify-content-center" >
-						<a href="page4.html" class="btn zoom" style="background-color: rgb(106, 179, 201);color:white;margin:1%">ANTERIOR</a>
-						<a href="page6.html" class="btn zoom" style="background-color: rgb(32, 156, 193);color:white;margin:1%">SIGUIENTE</a>
-					</div>	
+		<div class="row animated fadeInDown d-flex justify-content-center">
+			
+			<div class="col-7 ">
+				<div>	
+					<h3 class="text-center">
+						PASO 5
+					</h3>
+					<p class="text-center">
+						Una vez que se ingrese al website, seleccionar la opción "Manage devices". Hacer click en "Create new token". Este token en formato de código QR permitirá conectar el dispositivo al servidor. Tener en cuenta que el token solo es válido por 5 minutos.
+					</p>	
 				</div>
+
+				<div class="d-flex justify-content-center">
+					<img src="images/page5.gif" class="img-fluid" alt="Responsive image" style="width: 70%;padding:4%">
+				</div>
+
+				<div class="d-flex justify-content-center" >
+					<a href="page4.html" class="btn zoom" style="background-color: rgb(106, 179, 201);color:white;margin:1%">ANTERIOR</a>
+					<a href="page6.html" class="btn zoom" style="background-color: rgb(32, 156, 193);color:white;margin:1%">SIGUIENTE</a>
+				</div>	
 			</div>
-		</div>	
+			
+		</div>		
     </div>
 
 <!--===============================================================================================-->
@@ -99,3 +98,4 @@
 
 </body>
 </html>
+
