--- a/page6.html
+++ b/page6.html
@@ -41,10 +41,10 @@
 					<div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
 						<a class="dropdown-item" href="page1.html">Paso 1: Descargar app</a>
 						<a class="dropdown-item" href="page2.html">Paso 2: Instalar app</a>
-						<a class="dropdown-item" href="page3.html">Paso 3: Ingresar a web</a>
-						<a class="dropdown-item" href="page4.html">Paso 4: Elegir menú</a>
-						<a class="dropdown-item" href="page5.html">Paso 5: Generar QR</a>
-						<a class="dropdown-item" href="page6.html">Paso 6: Leer QR</a>
+						<a class="dropdown-item" href="page3.html">Paso 3: Ingresar app</a>
+						<a class="dropdown-item" href="page4.html">Paso 4: Ingresar a web</a>
+						<a class="dropdown-item" href="page5.html">Paso 5: Generar token/QR</a>
+						<a class="dropdown-item" href="page6.html">Paso 6: Leer token/QR</a>
 						<a class="dropdown-item" href="page7.html">Paso 7: Descargar data</a>
 						<a class="dropdown-item" href="page8.html">Paso 8: Ejecutar app</a>
 						<a class="dropdown-item" href="page9.html">Paso 9: Finalizar</a>
@@ -62,15 +62,12 @@
 							PASO 6	
 						</h3>
 						<p class="text-center">
-							Generar un código QR y leerlo con la app con la opción "Configurar app con QR"
+							En el caso de haber ingresado al website desde el dispositivo, copiar el token con el botón de "copy" y pegarlo en la opción "Configurar app ingresando token". Si se ingresó al website desde la computadora seleccionar la opción "Configurar app con QR" y escanear QR. 
 						</p>	
-						<h5 class="text-center">
-							Nota: en caso de que el QR no funcione se puede copiar el token con el botón Copy y pegarlo con la opción "Configurar app ingresando token"
-						</h5>
 					</div>
 
 					<div class="d-flex justify-content-center">
-						<img src="images/page6.jpg" class="img-fluid" alt="Responsive image" style="width: 70%;padding:4%">
+						<img src="images/page6.gif" class="img-fluid" alt="Responsive image" style="width: 60%;padding:4%">
 					</div>
 
 					<div class="d-flex justify-content-center" >
