--- a/page7.html
+++ b/page7.html
@@ -41,10 +41,10 @@
 					<div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
 						<a class="dropdown-item" href="page1.html">Paso 1: Descargar app</a>
 						<a class="dropdown-item" href="page2.html">Paso 2: Instalar app</a>
-						<a class="dropdown-item" href="page3.html">Paso 3: Ingresar a web</a>
-						<a class="dropdown-item" href="page4.html">Paso 4: Elegir menú</a>
-						<a class="dropdown-item" href="page5.html">Paso 5: Generar QR</a>
-						<a class="dropdown-item" href="page6.html">Paso 6: Leer QR</a>
+						<a class="dropdown-item" href="page3.html">Paso 3: Ingresar app</a>
+						<a class="dropdown-item" href="page4.html">Paso 4: Ingresar a web</a>
+						<a class="dropdown-item" href="page5.html">Paso 5: Generar token/QR</a>
+						<a class="dropdown-item" href="page6.html">Paso 6: Leer token/QR</a>
 						<a class="dropdown-item" href="page7.html">Paso 7: Descargar data</a>
 						<a class="dropdown-item" href="page8.html">Paso 8: Ejecutar app</a>
 						<a class="dropdown-item" href="page9.html">Paso 9: Finalizar</a>
@@ -62,13 +62,13 @@
 							PASO 7	
 						</h3>
 						<p class="text-center">
-							Una vez que se lea el QR o se ingrese el token correctamente aparecerá la siguiente pantalla. Apretar el botón verde para descargar la data del servidor.
+							Si aparece la siguiente pantalla la conexión fue correcta. Apretar el botón verde para descargar la data del servidor en el dispositivo. Nota: El botón rojo elimina la data y "olvida" el token. El botón amarillo permite volver a conectarse a un server distinto o al mismo sin "olvidar" el anterior ni eliminar data.
 						</p>	
-						
+				
 					</div>
 
 					<div class="d-flex justify-content-center">
-						<img src="images/page7.jpg" class="img-fluid" alt="Responsive image" style="width: 70%;padding:4%">
+						<img src="images/page7.jpg" class="img-fluid" alt="Responsive image" style="width: 60%;padding:4%">
 					</div>
 
 					<div class="d-flex justify-content-center" >
