--- a/page8.html
+++ b/page8.html
@@ -41,10 +41,10 @@
 					<div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
 						<a class="dropdown-item" href="page1.html">Paso 1: Descargar app</a>
 						<a class="dropdown-item" href="page2.html">Paso 2: Instalar app</a>
-						<a class="dropdown-item" href="page3.html">Paso 3: Ingresar a web</a>
-						<a class="dropdown-item" href="page4.html">Paso 4: Elegir menú</a>
-						<a class="dropdown-item" href="page5.html">Paso 5: Generar QR</a>
-						<a class="dropdown-item" href="page6.html">Paso 6: Leer QR</a>
+						<a class="dropdown-item" href="page3.html">Paso 3: Ingresar app</a>
+						<a class="dropdown-item" href="page4.html">Paso 4: Ingresar a web</a>
+						<a class="dropdown-item" href="page5.html">Paso 5: Generar token/QR</a>
+						<a class="dropdown-item" href="page6.html">Paso 6: Leer token/QR</a>
 						<a class="dropdown-item" href="page7.html">Paso 7: Descargar data</a>
 						<a class="dropdown-item" href="page8.html">Paso 8: Ejecutar app</a>
 						<a class="dropdown-item" href="page9.html">Paso 9: Finalizar</a>
@@ -57,17 +57,18 @@
 		<div class="row animated fadeInDown">
 			<div class="d-flex justify-content-center">
 				<div class="col-7">
-					<div>	
-						<h3 class="text-center">
-							PASO 8
-						</h3>
-						<p class="text-center">
-							Cuando la descarga finalice, aparecerá la palabra "Done" arriba de la barra y la totalidad de archivos descargados. Cerrar pantalla de descarga. Seleccionar botón de "Launch app" y comenzar a utilizar la app.
-						</p>	
-					</div>
+							
+				<div>	
+					<h3 class="text-center">
+						PASO 8
+					</h3>
+					<p class="text-center">
+						Al apretar en el botón verde, se descargará toda la data que reside en el servidor. Cuando finalice aparecerá la palabra "Done" arriba de la barra y la totalidad de archivos descargados. Cerrar pantalla de descarga. Seleccionar botón de "Launch app" y comenzar a utilizar la app.
+					</p>	
+				</div>
 
 					<div class="d-flex justify-content-center">
-						<img src="images/page8.jpg" class="img-fluid" alt="Responsive image" style="width: 70%;padding:4%">
+						<img src="images/page8.gif" class="img-fluid" alt="Responsive image" style="width: 60%;padding:4%">
 					</div>
 
 					<div class="d-flex justify-content-center" >
