--- a/page9.html
+++ b/page9.html
@@ -41,10 +41,10 @@
 					<div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
 						<a class="dropdown-item" href="page1.html">Paso 1: Descargar app</a>
 						<a class="dropdown-item" href="page2.html">Paso 2: Instalar app</a>
-						<a class="dropdown-item" href="page3.html">Paso 3: Ingresar a web</a>
-						<a class="dropdown-item" href="page4.html">Paso 4: Elegir menú</a>
-						<a class="dropdown-item" href="page5.html">Paso 5: Generar QR</a>
-						<a class="dropdown-item" href="page6.html">Paso 6: Leer QR</a>
+						<a class="dropdown-item" href="page3.html">Paso 3: Ingresar app</a>
+						<a class="dropdown-item" href="page4.html">Paso 4: Ingresar a web</a>
+						<a class="dropdown-item" href="page5.html">Paso 5: Generar token/QR</a>
+						<a class="dropdown-item" href="page6.html">Paso 6: Leer token/QR</a>
 						<a class="dropdown-item" href="page7.html">Paso 7: Descargar data</a>
 						<a class="dropdown-item" href="page8.html">Paso 8: Ejecutar app</a>
 						<a class="dropdown-item" href="page9.html">Paso 9: Finalizar</a>
@@ -62,7 +62,7 @@
 							PASO 9
 						</h3>
 						<p class="text-center">
-							Si la descarga fue correcta aparecerá la pantalla de log in. Una vez logueado se podrá acceder a la pantalla principal de la app.
+							Si la descarga fue correcta aparecerá la pantalla de log in. Una vez logueado se podrá acceder a la pantalla principal de la app. ¡Muchas gracias por utilizar SmartWorkAR!
 						</p>	
 					</div>
 
