--- a/page4.html
+++ b/page4.html
@@ -41,10 +41,10 @@
 					<div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
 						<a class="dropdown-item" href="page1.html">Paso 1: Descargar app</a>
 						<a class="dropdown-item" href="page2.html">Paso 2: Instalar app</a>
-						<a class="dropdown-item" href="page3.html">Paso 3: Ingresar a web</a>
-						<a class="dropdown-item" href="page4.html">Paso 4: Elegir menú</a>
-						<a class="dropdown-item" href="page5.html">Paso 5: Generar QR</a>
-						<a class="dropdown-item" href="page6.html">Paso 6: Leer QR</a>
+						<a class="dropdown-item" href="page3.html">Paso 3: Ingresar app</a>
+						<a class="dropdown-item" href="page4.html">Paso 4: Ingresar a web</a>
+						<a class="dropdown-item" href="page5.html">Paso 5: Generar token/QR</a>
+						<a class="dropdown-item" href="page6.html">Paso 6: Leer token/QR</a>
 						<a class="dropdown-item" href="page7.html">Paso 7: Descargar data</a>
 						<a class="dropdown-item" href="page8.html">Paso 8: Ejecutar app</a>
 						<a class="dropdown-item" href="page9.html">Paso 9: Finalizar</a>
@@ -54,29 +54,29 @@
 				</div>
 			</div>
 		</div>
-		<div class="row animated fadeInDown">
-			<div class="d-flex justify-content-center">
-				<div class="col-7">
-					<div>	
-						<h3 class="text-center">
-							PASO 4
-						</h3>
-						<p class="text-center">
-							Elegir opción "Manage devices"
-						</p>	
-						
-					</div>
-
-					<div class="d-flex justify-content-center">
-						<img src="images/page4.jpg" class="img-fluid" alt="Responsive image" style="width: 70%;padding:4%">
-					</div>
-
-					<div class="d-flex justify-content-center" >
-						<a href="page3.html" class="btn zoom" style="background-color: rgb(106, 179, 201);color:white;margin:1%">ANTERIOR</a>
-						<a href="page5.html" class="btn zoom" style="background-color: rgb(32, 156, 193);color:white;margin:1%">SIGUIENTE</a>
-					</div>	
+		<div class="row animated fadeInDown d-flex justify-content-center">
+			
+			<div class="col-7 ">
+				<div>	
+					<h3 class="text-center">
+						PASO 4
+					</h3>
+					<p class="text-center">
+						Ingresar al <a href="http://tgnvalvulas.smartworkar.com:8888/ui/#/">website</a> con usuario y contraseña. Nuevamente, se puede ingresar desde el navegador del dispositivo o desde el navegador de una computadora.
+					</p>	
+					
 				</div>
+
+				<div class="d-flex justify-content-center">
+					<img src="images/page4.gif" class="img-fluid" alt="Responsive image" style="width: 70%;padding:4%">
+				</div>
+
+				<div class="d-flex justify-content-center" >
+					<a href="page3.html" class="btn zoom" style="background-color: rgb(106, 179, 201);color:white;margin:1%">ANTERIOR</a>
+					<a href="page5.html" class="btn zoom" style="background-color: rgb(32, 156, 193);color:white;margin:1%">SIGUIENTE</a>
+				</div>	
 			</div>
+			
 		</div>	
     </div>
 
