--- a/page6.html
+++ b/page6.html
@@ -62,7 +62,7 @@
 							PASO 6	
 						</h3>
 						<p class="text-center">
-							En el caso de haber ingresado al website desde el dispositivo, copiar el token con el botón de "copy" y pegarlo en la opción "Configurar app ingresando token". Si se ingresó al website desde la computadora seleccionar la opción "Configurar app con QR" y escanear QR. 
+							En el caso de haber ingresado al website desde el dispositivo, copiar el token con el botón de "copy", entrar a la app y pegarlo en la opción "Configurar app ingresando token". Si se ingresó al website desde la computadora seleccionar la opción "Configurar app con QR" y escanear QR. 
 						</p>	
 					</div>
 
