--- a/page1.html
+++ b/page1.html
@@ -62,7 +62,7 @@
 						PASO 1
 					</h3>
 					<p class="text-center">
-						Descargar APP desde el <a href="http://tgnvalvulas.smartworkar.com:8888/ui/#/">website</a> con el botón "Download app". Se puede ingresar al website desde el dispositivo y descargar la app directamente. También se puede ingresar desde la computadora y pasar la aplicación vía USB.
+						Descargar APP desde el <a href="http://tgnvalvulas.smartworkar.com:8888/ui/#/" target="_blank" >website</a> con el botón "Download app". Se puede ingresar al website desde el dispositivo y descargar la app directamente. También se puede ingresar desde la computadora y pasar la aplicación vía USB.
 					</p>
 				</div>
 
