--- a/page4.html
+++ b/page4.html
@@ -62,7 +62,7 @@
 						PASO 4
 					</h3>
 					<p class="text-center">
-						Ingresar al <a href="http://tgnvalvulas.smartworkar.com:8888/ui/#/">website</a> con usuario y contraseña. Nuevamente, se puede ingresar desde el navegador del dispositivo o desde el navegador de una computadora.
+						Ingresar al <a href="http://tgn.smartworkar.com:8888/ui/#/" target="_blank">website</a> con usuario y contraseña. Nuevamente, se puede ingresar desde el navegador del dispositivo o desde el navegador de una computadora.
 					</p>	
 					
 				</div>
